--- a/index.html
+++ b/index.html
@@ -48,16 +48,17 @@
                 </div>
                 <div class="search_body">
                     <div class="search_box"><span id="curr"></span><input type="text" placeholder="Current Location"
-                            id="current">
+                            id="current" required>
                     </div>
-                    <div class="search_box"><span id="loc"></span><input type="text" placeholder="Enter Destination" id="destination">
+                    <div class="search_box"><span id="loc"></span><input type="text" placeholder="Enter Destination"
+                            id="destination" required>
                     </div>
                     <div class="box">
                         <div class="sub_box">
                             <i class="fa-solid fa-user"></i>
-                            <input type="number" value="1">
+                            <input type="number" value="1" required>
                         </div>
-                        <input type="date">
+                        <input type="date" id="date" required>
                     </div>
                     <div class="submit_button"><input type="submit" value="Search Buddy"></div>
                 </div>
