--- a/data.html
+++ b/data.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
         <div class="main_body">
-            <div class="data_box">
+            <!-- <div class="data_box">
                 <div class="location_data">
                     <ul class="location_details">
                         <ul><li id="ptime">Time</li><li id="Pickup">Pickup Location</li></ul>
@@ -48,11 +48,10 @@
                     </ul>
                 </div>
                 <div class="price" id="fair_price">₹30</div>
-            </div>
+            </div> -->
         </div>
     </div>
 
-    <script src="map.js"></script>
+    <script src="data.js"></script>
 </body>
-
 </html>
