--- a/data.html
+++ b/data.html
@@ -37,8 +37,20 @@
             <!-- <div class="data_box">
                 <div class="location_data">
                     <ul class="location_details">
-                        <ul><li id="ptime">Time</li><li id="Pickup">Pickup Location</li></ul>
-                        <ul><li id="dtime">Time</li><li id="drop">Drop Location</li></ul>
+                        <ul>
+                            <li id="ptime">Time</li>
+                            <ul>
+                                <li id="Pickup">Pickup Location</li>
+                                <li id="dist">Distance</li>
+                            </ul>
+                        </ul>
+                        <ul>
+                            <li id="dtime">Time</li>
+                            <ul>
+                                <li id="drop">Drop Location</li>
+                                <li id="dist">Distance</li>
+                            </ul>
+                        </ul>
                     </ul>
                 </div>
                 <div class="driver_data">
@@ -48,10 +60,12 @@
                     </ul>
                 </div>
                 <div class="price" id="fair_price">₹30</div>
+                <div class="time">10 min</div>
             </div> -->
         </div>
     </div>
 
     <script src="data.js"></script>
 </body>
+
 </html>
