--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </li>
                 <li>
                     <ul class="options">
-                        <li id="signup" class="button"><a href="#">Sign Up</a></li>
-                        <li id="login" class="button"><a href="#">Login</a></li>
+                        <li id="signup" class="button"><a href="login.html">Sign Up</a></li>
+                        <li id="login" class="button"><a href="login.html">Login</a></li>
                         <!-- <li id="user">user</li> -->
                     </ul>
                 </li>
