--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </div>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdnBmOuDyXW3seo8Iw3goRhZEmGVRsqNM&libraries=places&v=weekly&solution_channel=GMP_CCS_autocomplete_v1"
+        src="google_map_api"
         defer></script>
     <script src="script.js"></script>
 </body>
